forgejo/tailscale-ssh-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo-ssh-tailscale
  namespace: forgejo
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "forgejo-ssh"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/instance: forgejo
  ports:
    - name: ssh
      protocol: TCP
      port: 22
      targetPort: 2222
