forgejo/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo
  namespace: forgejo
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: forgejo-http
      port:
        number: 3000
  tls:
    - hosts:
        - forgejo
